# traderbot

./: pyproject.toml
src/: app.py  nob.ipynb
src/models/: market.py  market_frame.py  pair.py  symbol.py  transaction.py
src/providers/: ccxt.py  crypto.py  crypto_exchange.py  mock_crypto.py  provider.py
src/scripts/: fetch_market_data.py
src/strategies/: average_crossover.py  strategy.py
src/timers/: backtest.py  interval.py  timer.py
src/wallets/: mock_wallet.py  wallet.py
